2003-07-21  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Added failure_response(), update_response() and
           complete_response() messages.
           
2003-07-20  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Added reject_response() and confirm_response()
                   
2003-07-16  Alasdair Allan <aa@astro.ex.ac.uk>

         * Added filter support
         
2003-07-15  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Added score_response() method to generate a scoring
           response message.
           
         * Parse.pm: Added port() and host() methods to retrieve the
           originiating host and port from a parsed RTML message
             
2003-06-27  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Fixed the request_observation() routine to handle SNR
           and Flux correctly.
           
         * Build.pm: Fixed so that it actually takes acount of the host
           parameter passed when the object is created. It was ignoring it
           and setting the IA host to $host = hostname() . "." . hostdomain();
           
2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>

         * Parse.pm: Fixed ra() and dec() which were incorrectly looking
           for a 'tag_value' keyword inside the Coordinates subtag. Added
           flux() method.
           
2003-06-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Build.pm: Added support for Signal-to-noise requests in addition
          to straight exposure time requests. Removed freeze() function.

        * Parse.pm: Added support for Signal-to-noise.
            
        * RTML.pm: Added support for RTML documents from scalars as well as
          from a file.
                    
2002-03-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Added freeze() functions for persistent store
        
2002-03-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Parse.pm: Added a whole bunch of query methods needed by